# aiecommon

./: .gitignore  CHANGELOG  Exceptions.py  README.md  __init__.py  pyproject.toml
docs/: DEVELOPMENT - Checking And Closing The Task.md  DEVELOPMENT - Release Cycle And Publishing.md  DEVELOPMENT - Working On A Task.md  DEVELOPMENT - Working With aiecommon.md
docs/tests/: SolaPlannerApi-Insomnia.json
scripts/: tag-version.cmd  tag-version.py  tag_branch_wtih_version.sh  tag_version.cmd  tag_version.py  update-version.cmd  update-version.py  update_version.py  update_version.sh
src/aiecommon/: Decorators.py  Errors.py  Exceptions.py  Logger.py  __init__.py  fastapi_utils.py
src/aiecommon/DataModels/: CountryData.py  InputData.py  PricesTechnologies.py  RequestData.py  ResponseData.py  SystemOptimisationType.py  TechnicalData.py  __init__.py  data_model_base.py
src/aiecommon/Entities/: Location.py  PricesTechnologies.py  Response.py  Rooftop.py  Scenario.py  __init__.py
src/aiecommon/FileSystem/: GoogleDrive.py  LocalFile.py  __init__.py  file_system_base.py  google_drive.py  local_data_files.py  local_runtime_files.py
src/aiecommon/Interfaces/: GetClosestInlandPoint.py  GetDemandData.py  GetEmissionsData.py  GetInvestmentData.py  GetPowerPricesData.py  GetSolarProductionData.py  __init__.py
src/aiecommon/Models/: Battery.py  BiddingRegion.py  Country.py  ElectricVehicle.py  Geometry.py  HeatPump.py  InputData.py  InputDataOLD.py  Inverter.py  Location.py  MeterData.py  Photovoltaic.py  Request.py  Response.py  Rooftop.py  RooftopParts.py  RooftopSide.py  (+7 more)
(+44 files in other folders)
