[tool.poetry]
name = "aiecommon"
version = "0.1.5"
description = ""
authors = ["Pepe Una <pepe@ai-nergy.net>"]
readme = "README.md"
packages = [{include = "aiecommon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
