[tool.poetry]
name = "aiecommon"
version = "0.1.8"
description = ""
authors = ["Pepe Una <pepe@ai-nergy.net>"]
readme = "README.md"
packages = [{include = "aiecommon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.92.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
