[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiecommon"
version = "0.2.0.21"
description = ""
authors = [ "Pepe Una <pepe@ai-nergy.net>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "aiecommon"
from = "src"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
google-api-python-client = "^2.92.0"
toml = "^0.10.2"
semver = "^3.0.1"
pydantic = "^1.10.2"
fastapi = "^0.116.1"
